# iceoptimizer

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
example/: iceoptimizer_example.json
ice_optimizer/: config_file.py  config_planner.py  core.py  executor.py  parser_schema.py  sql_generator.py  table_inspector.py
