[project]
name = "ice-optimizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Vugar Abdulali", email = "vabdulaliyev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic (>=2.8.0,<3.0.0)",
    "pyspark (==3.5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
